lib/src/compiler/tests/testdata/errors/88.out
error[E001]: syntax error
 --> line:3:18
  |
3 |   any of (a,b,c) at 0
  |                  ^^ unexpected `at`
  |